<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".detailsGame.view.DetailsGameFragment">

    <ImageView
        android:id="@+id/imageCover_Details"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_250dp"
        android:contentDescription="@string/cover_details_game"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/mortal" />

    <ImageView
        android:id="@+id/imgBack_Details"
        android:layout_width="@dimen/dimen_30dp"
        android:layout_height="@dimen/dimen_30dp"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/back" />


    <TextView
        android:id="@+id/textTitleCover_Details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="204dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Mortal Kombat X" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnEdit_Details"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="start|top"
        android:layout_margin="16dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="@color/colorPrimary"
        android:contentDescription="@string/edit"
        android:src="@drawable/ic_baseline_edit_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.327" />

    <TextView
        android:id="@+id/textTitleGame_Details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:textColor="@color/gray"
        android:textSize="@dimen/dimen_25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitleCover_Details"
        tools:text="Mortal Kombat X" />

    <TextView
        android:id="@+id/textlancamento_Details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:textColor="@color/gray"
        android:textSize="@dimen/dimen_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitleGame_Details"
        tools:text="Lançamento: 2018" />

    <TextView
        android:id="@+id/textDescriptionComic_Details"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:textColor="@color/gray"
        android:textSize="@dimen/dimen_16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textlancamento_Details"
        tools:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publis" />

</androidx.constraintlayout.widget.ConstraintLayout>